📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -2230,5 +2230,117 @@
         "published": "Mon, 08 Dec 2025 17:38:34 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46195198\">Comments</a>"
+    },
+    {
+        "id": "https://www.theverge.com/news/839817/anthropic-claude-code-slack-integration",
+        "title": "Anthropic is bringing Claude Code to Slack",
+        "link": "https://www.theverge.com/news/839817/anthropic-claude-code-slack-integration",
+        "published": "2025-12-08T14:01:00-05:00",
+        "source": "The Verge",
+        "summary": "Slack users can now access Anthropic's Claude Code directly in Slack by tagging Claude on coding-related messages and threads. The new feature is launching today in beta as a research preview. When Claude is tagged, it will now automatically scan the message to see if it's a coding task and, if so, route it to [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/840124/lenovo-rollable-legion-pro-gaming-laptop-rumor",
+        "title": "Lenovo\u2019s next gaming laptop may have a rollable OLED screen that stretches ultrawide",
+        "link": "https://www.theverge.com/news/840124/lenovo-rollable-legion-pro-gaming-laptop-rumor",
+        "published": "2025-12-08T13:33:51-05:00",
+        "source": "The Verge",
+        "summary": "Lenovo has already demonstrated its ability to put rollable OLEDs into laptops by graduating last year from demo concept models to shipping the ThinkBook Plus Gen 6, an actual device you can buy. It has a built-in mechanism that expands the screen vertically to give you more screen real estate for typing and scrolling. However, [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/entertainment/840080/square-enix-hd2d-games-octopath-dragon-quest",
+        "title": "It\u2019s ugly, it\u2019s beautiful, it\u2019s how you know a game might be a classic",
+        "link": "https://www.theverge.com/entertainment/840080/square-enix-hd2d-games-octopath-dragon-quest",
+        "published": "2025-12-08T13:30:00-05:00",
+        "source": "The Verge",
+        "summary": "At their biggest and most expensive, video games all sort of look the same. The reason often comes down to simple economics: More resources means more costs that need to be recouped, and historically the way publishers have done that is by being comically risk-averse. Hence the glut of semi-realistic rocky wastelands that look like [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/840164/iceblock-joshua-aaron-sues-trump-administration-apple-app-store-removeal",
+        "title": "ICEBlock developer sues Trump administration over App Store removal",
+        "link": "https://www.theverge.com/news/840164/iceblock-joshua-aaron-sues-trump-administration-apple-app-store-removeal",
+        "published": "2025-12-08T13:25:33-05:00",
+        "source": "The Verge",
+        "summary": "Joshua Aaron, the developer of the ICEBlock app, is suing Attorney General Pam Bondi, US Homeland Security Secretary Kirsti Noem, acting director of ICE Todd Lyons, White House \"Border Czar\" Tom Homan, and other federal officials over the Trump administration's \"unlawful threats\" made against Aaron and its actions to pressure Apple to pull the app [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/mutations-in-a-single-gene-have-been-linked-to-mental-illness/",
+        "title": "For the First Time, Mutations in a Single Gene Have Been Linked to Mental Illness",
+        "link": "https://www.wired.com/story/mutations-in-a-single-gene-have-been-linked-to-mental-illness/",
+        "published": "Mon, 08 Dec 2025 18:54:05 +0000",
+        "source": "WIRED",
+        "summary": "Research links variations in the gene GRIN2A to a higher risk of developing schizophrenia and other forms of mental illness."
+    },
+    {
+        "id": "https://www.engadget.com/social-media/meta-will-let-facebook-and-instagram-users-in-the-eu-share-less-data-183535897.html?src=rss",
+        "title": "Meta will let Facebook and Instagram users in the EU share less data",
+        "link": "https://www.engadget.com/social-media/meta-will-let-facebook-and-instagram-users-in-the-eu-share-less-data-183535897.html?src=rss",
+        "published": "Mon, 08 Dec 2025 18:35:35 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Meta will soon allow Facebook and Instagram users in the European Union to choose to share less data and see less personalized ads on the platform, the European Commission <a class=\"link\" href=\"https://digital-markets-act.ec.europa.eu/meta-commits-give-eu-users-choice-personalised-ads-under-dma-2025-12-08_en\" target=\"_blank\">announced</a>. The change will begin to roll out in January, according to the regulator.&nbsp;</p><p>&quot;This is the first time that such a choice is offered on Meta's "
+    },
+    {
+        "id": "https://gizmodo.com/iceblock-sues-white-house-over-pressuring-apple-for-app-store-removal-2000696820",
+        "title": "ICEBlock Sues White House Over Pressuring Apple for App Store Removal",
+        "link": "https://gizmodo.com/iceblock-sues-white-house-over-pressuring-apple-for-app-store-removal-2000696820",
+        "published": "Mon, 08 Dec 2025 19:00:49 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Apple CEO Tim Cook giving a thumb&#039;s up\" class=\"attachment-full size-full wp-post-image\" height=\"1000\" src=\"https://gizmodo.com/app/uploads/2025/01/Apple-CEO-Tim-Cook-giving-a-thumbs-up-1.jpg\" width=\"1500\" /><br /><br />ICEBlock developer Joshua Aaron claims that the removal is a suppression of free speech"
+    },
+    {
+        "id": "https://gizmodo.com/elon-musks-optimus-robot-collapses-in-a-hilariously-suspicious-way-2000696760",
+        "title": "Elon Musk\u2019s Optimus Robot Collapses in a Hilariously Suspicious Way",
+        "link": "https://gizmodo.com/elon-musks-optimus-robot-collapses-in-a-hilariously-suspicious-way-2000696760",
+        "published": "Mon, 08 Dec 2025 18:30:27 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Screenshots from a viral video showing Tesla&#039;s Optimus robot falling over backwards on Dec. 6, 2025.\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/tesla-optimus-robot-art-basel-fall-headset.jpg\" width=\"1920\" /><br /><br />Musk says he's going to make 1 million robots per year by 2030."
+    },
+    {
+        "id": "https://gizmodo.com/amazon-clears-out-this-eureka-vacuum-at-a-price-several-times-cheaper-than-dyson-to-wrap-up-cyber-week-2000696026",
+        "title": "Amazon Clears Out This Eureka Vacuum at a Price Several Times Cheaper Than Dyson for Early Christmas",
+        "link": "https://gizmodo.com/amazon-clears-out-this-eureka-vacuum-at-a-price-several-times-cheaper-than-dyson-to-wrap-up-cyber-week-2000696026",
+        "published": "Mon, 08 Dec 2025 18:05:58 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Eureka\" class=\"attachment-full size-full wp-post-image\" height=\"1000\" src=\"https://gizmodo.com/app/uploads/2025/12/Eureka.jpg\" width=\"1500\" /><br /><br />It's time to tidy up now that the holidays are here, so make sure you don't miss out on this deal."
+    },
+    {
+        "id": "https://mashable.com/article/dec-8-disney-plus-perks",
+        "title": "Disney+ comes with even more perks this season: Get 6 free months of DashPass and more",
+        "link": "https://mashable.com/article/dec-8-disney-plus-perks",
+        "published": "Mon, 08 Dec 2025 17:39:50 +0000",
+        "source": "Mashable",
+        "summary": "Disney+ is giving subscribers exclusive perks this season, like six free months of DashPass, discounted Broadway tickets, and more."
+    },
+    {
+        "id": "https://mashable.com/article/apple-product-launches-to-expect-early-2026",
+        "title": "Four Apple product launches to expect in the near future",
+        "link": "https://mashable.com/article/apple-product-launches-to-expect-early-2026",
+        "published": "Mon, 08 Dec 2025 17:36:49 +0000",
+        "source": "Mashable",
+        "summary": "Apple could have some new MacBooks, iPads, and even a new iPhone in the next few months."
+    },
+    {
+        "id": "https://mashable.com/article/dec-8-dji-mic-mini-deal",
+        "title": "Gift your content-creator friend the DJI Mic Mini while its on sale for just $45",
+        "link": "https://mashable.com/article/dec-8-dji-mic-mini-deal",
+        "published": "Mon, 08 Dec 2025 17:35:39 +0000",
+        "source": "Mashable",
+        "summary": "The DJI Mic Mini is on sale at Target for $45, down from the normal price of $89. That's a 49% discount."
+    },
+    {
+        "id": "https://www.simonsfoundation.org/2025/12/08/quanta-books-to-publish-popular-math-and-physics-titles-by-terence-tao-and-david-tong/",
+        "title": "Quanta to Publish Popular Math and Physics Titles by Terence Tao and David Tong",
+        "link": "https://www.simonsfoundation.org/2025/12/08/quanta-books-to-publish-popular-math-and-physics-titles-by-terence-tao-and-david-tong/",
+        "published": "Mon, 08 Dec 2025 17:39:55 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46195225\">Comments</a>"
+    },
+    {
+        "id": "https://www.trynia.ai/",
+        "title": "Launch HN: Nia (YC S25) \u2013 Give better context to coding agents",
+        "link": "https://www.trynia.ai/",
+        "published": "Mon, 08 Dec 2025 17:10:14 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46194828\">Comments</a>"
     }
 ]
