📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -2342,5 +2342,109 @@
         "published": "Mon, 08 Dec 2025 17:10:14 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46194828\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/08/environmental-groups-call-for-halt-to-new-data-center-construction/",
+        "title": "Environmental groups call for halt to new data center construction",
+        "link": "https://techcrunch.com/2025/12/08/environmental-groups-call-for-halt-to-new-data-center-construction/",
+        "published": "Mon, 08 Dec 2025 19:50:58 +0000",
+        "source": "TechCrunch",
+        "summary": "More than 230 organizations signed a public letter urging members of Congress to take action."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/08/claude-code-is-coming-to-slack-and-thats-a-bigger-deal-than-it-sounds/",
+        "title": "Claude Code is coming to Slack, and that\u2019s a bigger deal than it sounds",
+        "link": "https://techcrunch.com/2025/12/08/claude-code-is-coming-to-slack-and-thats-a-bigger-deal-than-it-sounds/",
+        "published": "Mon, 08 Dec 2025 19:18:05 +0000",
+        "source": "TechCrunch",
+        "summary": "Anthropic launches Claude Code in Slack, letting developers delegate coding tasks from chat threads. It's part of a shift toward AI-embedded collaboration that could reshape software workflows."
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/840161/apple-watch-series-11-holiday-deal-sale-2025",
+        "title": "The Apple Watch Series 11 just got a big $100 discount ahead of the holidays",
+        "link": "https://www.theverge.com/gadgets/840161/apple-watch-series-11-holiday-deal-sale-2025",
+        "published": "2025-12-08T14:17:59-05:00",
+        "source": "The Verge",
+        "summary": "We thought Black Friday and Cyber Monday would bring the lowest prices of the year, but apparently not. Right now, you can snag Apple\u2019s Watch Series 11 in the 42mm configuration with GPS for a new all-time low of $299 ($100 off) at Amazon, Walmart, and Best Buy. That beats the $70 discount we saw [&#8230;]"
+    },
+    {
+        "id": "https://www.engadget.com/apps/tiktok-announces-shared-feed-and-collections-features-193857725.html?src=rss",
+        "title": "TikTok announces shared feed and collections features",
+        "link": "https://www.engadget.com/apps/tiktok-announces-shared-feed-and-collections-features-193857725.html?src=rss",
+        "published": "Mon, 08 Dec 2025 19:38:57 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>TikTok just <a href=\"https://newsroom.tiktok.com/new-ways-for-friends-and-families-to-discover-share-and-connect-on-tiktok?lang=en\">announced a couple of updates</a> that that should make the app a bit more social. There's something called Shared Feed, which is exactly what it sounds like. It's a feed that friends and family can watch together, though at different times.&nbsp;</p>\n<p>This feed is shared via direct messaging and pulls up relevant content to everyone involved in the chat. TikTo"
+    },
+    {
+        "id": "https://www.engadget.com/transportation/evs/how-to-watch-rivians-autonomy-and-ai-day-and-what-to-expect-192838410.html?src=rss",
+        "title": "How to watch Rivian's Autonomy and AI day and what to expect",
+        "link": "https://www.engadget.com/transportation/evs/how-to-watch-rivians-autonomy-and-ai-day-and-what-to-expect-192838410.html?src=rss",
+        "published": "Mon, 08 Dec 2025 19:28:38 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p><a class=\"link\" href=\"https://www.engadget.com/transportation/rivian-spinoff-reveals-a-3500-starting-price-for-its-first-e-bike-195949124.html\" target=\"_blank\">Rivian</a> is about to give the public and its investors another taste of its future with an event focused on autonomy and AI on December 11. The company's Autonomy and AI day starts at 12PM ET. You can watch the event via the <a class=\"link\" href=\"https://rivian.com/autonomy\" target=\"_blank\">Rivian website</a>. We'll be liveblogging t"
+    },
+    {
+        "id": "https://gizmodo.com/even-minor-video-call-glitches-could-cost-you-a-job-or-your-freedom-2000696578",
+        "title": "Even Minor Video Call Glitches Could Cost You a Job\u2014or Your Freedom",
+        "link": "https://gizmodo.com/even-minor-video-call-glitches-could-cost-you-a-job-or-your-freedom-2000696578",
+        "published": "Mon, 08 Dec 2025 20:10:08 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Woman On Video Call\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/woman-on-video-call.jpg\" width=\"1920\" /><br /><br />Researchers found that minor connection issues during face-to-face video calls negatively impacted interpersonal judgments, with significant implications in contexts such as telehealth visits, remote interviews, and virtual parole hearings."
+    },
+    {
+        "id": "https://gizmodo.com/ron-desantis-proposes-ai-bill-of-rights-as-trump-says-hell-kill-state-ai-laws-2000696828",
+        "title": "Ron DeSantis Proposes AI Bill of Rights as Trump Says He\u2019ll Kill State AI Laws",
+        "link": "https://gizmodo.com/ron-desantis-proposes-ai-bill-of-rights-as-trump-says-hell-kill-state-ai-laws-2000696828",
+        "published": "Mon, 08 Dec 2025 19:10:15 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Photo: Evan Vucci\" class=\"attachment-full size-full wp-post-image\" height=\"880\" src=\"https://gizmodo.com/app/uploads/2022/11/87ce45fc41abfaf9bcc678e9fb3b813b.jpg\" width=\"1572\" /><br /><br />A MAGA rift?"
+    },
+    {
+        "id": "https://gizmodo.com/war-between-the-land-and-the-sea-premiere-recap-review-doctor-who-disney-2000696766",
+        "title": "\u2018The War Between the Land and the Sea\u2019 Is Off to a Soggy Start",
+        "link": "https://gizmodo.com/war-between-the-land-and-the-sea-premiere-recap-review-doctor-who-disney-2000696766",
+        "published": "Mon, 08 Dec 2025 19:00:51 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"War Between Land And Sea Review Doctor Who\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/war-between-land-and-sea-review-doctor-who.jpg\" width=\"1920\" /><br /><br />The real war in the new 'Doctor Who' spinoff isn't between the Sea Devils and humanity, but between the show's bold ideas and a wildly uneven tone."
+    },
+    {
+        "id": "https://mashable.com/article/elon-musk-x-shuts-down-eu-ad-account-after-fine-over-exploit",
+        "title": "X shuts down EU ad account after historic fine",
+        "link": "https://mashable.com/article/elon-musk-x-shuts-down-eu-ad-account-after-fine-over-exploit",
+        "published": "Mon, 08 Dec 2025 18:57:03 +0000",
+        "source": "Mashable",
+        "summary": "Elon Musk's X has escalated its feud with the EU by banning its ad account on the platform."
+    },
+    {
+        "id": "https://www.zdnet.com/article/tcl-nxtpaper-11-plus-review/",
+        "title": "The tablet that made me put away my iPad and Kindle has a worthy successor - and it's on sale",
+        "link": "https://www.zdnet.com/article/tcl-nxtpaper-11-plus-review/",
+        "published": "Mon, 08 Dec 2025 20:04:00 GMT",
+        "source": "Latest news",
+        "summary": "The TCL Nxtpaper 11 Plus is a well-rounded Android tablet that delivers reliable everyday performance at an accessible price."
+    },
+    {
+        "id": "https://www.zdnet.com/article/verizon-free-nintendo-switch-deal-12-08-2025/",
+        "title": "Verizon will give you a free Nintendo Switch ahead of the holidays - here's how to qualify",
+        "link": "https://www.zdnet.com/article/verizon-free-nintendo-switch-deal-12-08-2025/",
+        "published": "Mon, 08 Dec 2025 19:28:00 GMT",
+        "source": "Latest news",
+        "summary": "Verizon's Black Friday deals for home internet include your choice of a free Nintendo Switch, Samsung TV, or Samsung tablet. Here's what to know."
+    },
+    {
+        "id": "https://philippeoger.com/pages/deep-dive-into-nvidias-virtuous-cycle",
+        "title": "Deep dive on Nvidia circular funding",
+        "link": "https://philippeoger.com/pages/deep-dive-into-nvidias-virtuous-cycle",
+        "published": "Mon, 08 Dec 2025 18:48:27 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46196076\">Comments</a>"
+    },
+    {
+        "id": "https://jepsen.io/analyses/nats-2.12.1",
+        "title": "Jepsen: NATS 2.12.1",
+        "link": "https://jepsen.io/analyses/nats-2.12.1",
+        "published": "Mon, 08 Dec 2025 18:51:03 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46196105\">Comments</a>"
     }
 ]
