📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -2446,5 +2446,93 @@
         "published": "Mon, 08 Dec 2025 18:51:03 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46196105\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/08/tiger-global-plans-cautious-venture-future-with-a-new-2-2b-fund/",
+        "title": "Tiger Global plans cautious venture  future with a new $2.2B fund",
+        "link": "https://techcrunch.com/2025/12/08/tiger-global-plans-cautious-venture-future-with-a-new-2-2b-fund/",
+        "published": "Mon, 08 Dec 2025 20:12:13 +0000",
+        "source": "TechCrunch",
+        "summary": "Tiger's last fund did well with investmetments in OpenAI, Waymo and Databricks. But it warns investors that AI valuations are already 'elevated.'"
+    },
+    {
+        "id": "https://www.wired.com/story/openai-cameo-products-that-already-exist/",
+        "title": "OpenAI Should Stop Naming Its Creations After Products That Already Exist",
+        "link": "https://www.wired.com/story/openai-cameo-products-that-already-exist/",
+        "published": "Mon, 08 Dec 2025 20:40:18 +0000",
+        "source": "WIRED",
+        "summary": "From \u201ccameo\u201d to \u201cio,\u201d OpenAI keeps trying to call its new and upcoming releases by names that resemble existing trademarks."
+    },
+    {
+        "id": "https://arstechnica.com/gadgets/2025/12/paramount-says-it-could-get-antitrust-approval-for-wbd-before-netflix/",
+        "title": "Paramount tries to swipe Warner Bros. from Netflix with a hostile takeover",
+        "link": "https://arstechnica.com/gadgets/2025/12/paramount-says-it-could-get-antitrust-approval-for-wbd-before-netflix/",
+        "published": "Mon, 08 Dec 2025 18:36:16 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Paramount has already proven it can get a controversial merger done."
+    },
+    {
+        "id": "https://www.engadget.com/mobile/smartphones/google-and-apple-partner-on-better-android-iphone-switching-204738960.html?src=rss",
+        "title": "Google and Apple partner on better Android-iPhone switching",
+        "link": "https://www.engadget.com/mobile/smartphones/google-and-apple-partner-on-better-android-iphone-switching-204738960.html?src=rss",
+        "published": "Mon, 08 Dec 2025 20:47:38 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Google and Apple have long existed as polar opposites, each ruling over their tech kingdoms with little interest in cooperation. But the latest build of Android's Canary operating system hints at an unusual instance of collaboration between the brands, with a new feature that seems aimed at making data transfer simpler between Android and iOS mobile device during the setup phase. It is expected to also be available in a future developer beta of iOS 26.&nbsp;</p><p>A representative for Google "
+    },
+    {
+        "id": "https://gizmodo.com/pov-death-by-volcanic-eruption-2000696928",
+        "title": "POV: Death by Volcanic Eruption",
+        "link": "https://gizmodo.com/pov-death-by-volcanic-eruption-2000696928",
+        "published": "Mon, 08 Dec 2025 21:00:53 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Ash and tephra raining down from a lava fountain as Kilauea erupts\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/kilauea-eruption-2.jpg\" width=\"1920\" /><br /><br />A USGS webcam captured harrowing footage of Hawaii\u2019s K\u012blauea erupting over the weekend. It didn't survive."
+    },
+    {
+        "id": "https://gizmodo.com/xreal-project-aura-ui-details-galaxy-xr-warby-parker-gentle-monster-2000696882",
+        "title": "Here\u2019s the Best Look at Google\u2019s XR Glasses We\u2019ve Gotten Yet",
+        "link": "https://gizmodo.com/xreal-project-aura-ui-details-galaxy-xr-warby-parker-gentle-monster-2000696882",
+        "published": "Mon, 08 Dec 2025 21:00:51 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Project Aura\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/project-aura.jpg\" width=\"1920\" /><br /><br />Take a look at Project Aura's computing puck."
+    },
+    {
+        "id": "https://gizmodo.com/james-cameron-avatar-fire-and-ash-changes-2000696922",
+        "title": "James Cameron Changed \u2018Avatar: Fire and Ash\u2019 After Audiences Saw \u2018Way of Water\u2019",
+        "link": "https://gizmodo.com/james-cameron-avatar-fire-and-ash-changes-2000696922",
+        "published": "Mon, 08 Dec 2025 21:00:00 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Avatar Interview 3\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/Avatar-Interview-3.jpg\" width=\"1920\" /><br /><br />The director reacted to what audiences liked and didn't like about his movie for its follow-up, out December 19."
+    },
+    {
+        "id": "https://gizmodo.com/teslas-holiday-update-lets-you-put-grok-in-charge-of-mapping-out-directions-2000696891",
+        "title": "Tesla\u2019s Holiday Update Lets You Put Grok in Charge of Mapping Out Directions",
+        "link": "https://gizmodo.com/teslas-holiday-update-lets-you-put-grok-in-charge-of-mapping-out-directions-2000696891",
+        "published": "Mon, 08 Dec 2025 20:35:22 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Hands on a Tesla steering wheel\" class=\"attachment-full size-full wp-post-image\" height=\"1000\" src=\"https://gizmodo.com/app/uploads/2025/10/tesla-10-and-2.jpg\" width=\"1500\" /><br /><br />Tesla announced several new features for its cars in its 2025 Holiday Update today."
+    },
+    {
+        "id": "https://gizmodo.com/simu-liu-copenhagen-test-peacock-melissa-barrera-2000696895",
+        "title": "Before \u2018Avengers\u2019, Simu Liu\u2019s Brain Has Been Hacked in \u2018The Copenhagen Test\u2019",
+        "link": "https://gizmodo.com/simu-liu-copenhagen-test-peacock-melissa-barrera-2000696895",
+        "published": "Mon, 08 Dec 2025 20:23:06 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Copenhagen Test Simu Liu Melissa Barrera\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/Copenhagen-Test-Simu-Liu-Melissa-Barrera.jpg\" width=\"1920\" /><br /><br />It's not 'Doomsday' or 'Shang Chi 2,' but Liu will soon kick ass on a a Peacock sci-fi show with Melissa Barrera."
+    },
+    {
+        "id": "https://www.zdnet.com/article/nitecore-nb-plus-review/",
+        "title": "This portable power bank is irreplaceable for me, and it has less to do with the capacity",
+        "link": "https://www.zdnet.com/article/nitecore-nb-plus-review/",
+        "published": "Mon, 08 Dec 2025 21:07:00 GMT",
+        "source": "Latest news",
+        "summary": "The Nitecore NB Plus is thin, lightweight, water-resistant, and resilient against cold, heat, and knocks."
+    },
+    {
+        "id": "https://www.zdnet.com/article/google-wallet-new-travel-features/",
+        "title": "Your Google Wallet just got a truly helpful travel upgrade - here's how to set it up",
+        "link": "https://www.zdnet.com/article/google-wallet-new-travel-features/",
+        "published": "Mon, 08 Dec 2025 20:36:56 GMT",
+        "source": "Latest news",
+        "summary": "The features are designed to make sure you have easier access to important passes and information."
     }
 ]
