📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -2534,5 +2534,125 @@
         "published": "Mon, 08 Dec 2025 20:36:56 GMT",
         "source": "Latest news",
         "summary": "The features are designed to make sure you have easier access to important passes and information."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/08/investor-letter-reveals-skyrocketing-growth-of-waymos-robotaxi-rides/",
+        "title": "Investor letter reveals skyrocketing growth of Waymo\u2019s robotaxi rides",
+        "link": "https://techcrunch.com/2025/12/08/investor-letter-reveals-skyrocketing-growth-of-waymos-robotaxi-rides/",
+        "published": "Mon, 08 Dec 2025 21:58:13 +0000",
+        "source": "TechCrunch",
+        "summary": "Six months ago, Waymo disclosed it was providing 250,000 robotaxi rides. But it's grown significantly since, a leaked letter says."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/08/department-of-commerce-may-approve-nvidia-h200-chip-exports-to-china/",
+        "title": "Department of Commerce may approve Nvidia H200 chip exports to China",
+        "link": "https://techcrunch.com/2025/12/08/department-of-commerce-may-approve-nvidia-h200-chip-exports-to-china/",
+        "published": "Mon, 08 Dec 2025 21:40:46 +0000",
+        "source": "TechCrunch",
+        "summary": "This news comes as a bill was introduced in Congress last week to prevent these exact kinds of chip exports."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/08/googles-ai-try-on-app-doppl-adds-a-shoppable-discovery-feed/",
+        "title": "Google\u2019s AI try-on app Doppl adds a shoppable discovery feed",
+        "link": "https://techcrunch.com/2025/12/08/googles-ai-try-on-app-doppl-adds-a-shoppable-discovery-feed/",
+        "published": "Mon, 08 Dec 2025 21:29:03 +0000",
+        "source": "TechCrunch",
+        "summary": "The tech giant says the idea behind the new feed is to display recommendations so users can discover and virtually try on items. Nearly everything in the feed is shoppable, with direct links to merchants."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/08/lucid-motors-former-chief-engineer-sues-for-wrongful-termination-and-discrimination/",
+        "title": "Lucid Motors\u2019 former chief engineer sues for wrongful termination and discrimination",
+        "link": "https://techcrunch.com/2025/12/08/lucid-motors-former-chief-engineer-sues-for-wrongful-termination-and-discrimination/",
+        "published": "Mon, 08 Dec 2025 21:19:10 +0000",
+        "source": "TechCrunch",
+        "summary": "Eric Bach, who was fired in November, claims a top HR executive at the automaker called him a \"German Nazi.\""
+    },
+    {
+        "id": "https://www.theverge.com/tech/785418/best-teen-gift-ideas-2025",
+        "title": "The 34 best gifts that your teen will actually use",
+        "link": "https://www.theverge.com/tech/785418/best-teen-gift-ideas-2025",
+        "published": "2025-12-08T16:30:45-05:00",
+        "source": "The Verge",
+        "summary": "Between keeping up with TikTok trends and whatever new gadget just dropped, it's tough to know exactly what teens are into these days. Luckily, we can help. We may be older than teenagers, but many of us here at The Verge are kids at heart. Plus, we've also got a few staffers with older kids. [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/dr-oz-centers-for-medicare-and-medicaid-services-tells-employees-to-eat-less/",
+        "title": "Dr. Oz Tells His Federal Employees to Eat Less",
+        "link": "https://www.wired.com/story/dr-oz-centers-for-medicare-and-medicaid-services-tells-employees-to-eat-less/",
+        "published": "Mon, 08 Dec 2025 21:03:01 +0000",
+        "source": "WIRED",
+        "summary": "\u201cYou don\u2019t have to try every cookie on the holiday table,\u201d wrote Mehmet Oz in an email to all Centers for Medicare and Medicaid Services staffers."
+    },
+    {
+        "id": "https://www.engadget.com/entertainment/streaming/an-ai-copycat-of-king-gizzard--the-lizard-wizard-went-unnoticed-on-spotify-for-weeks-220018144.html?src=rss",
+        "title": "An AI copycat of King Gizzard & the Lizard Wizard went unnoticed on Spotify for weeks",
+        "link": "https://www.engadget.com/entertainment/streaming/an-ai-copycat-of-king-gizzard--the-lizard-wizard-went-unnoticed-on-spotify-for-weeks-220018144.html?src=rss",
+        "published": "Mon, 08 Dec 2025 22:00:18 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Despite making some moves to address the proliferation of AI-generated audio on its platform, Spotify failed to catch a copycat making imitations of music by King Gizzard &amp; the Lizard Wizard. The long-running experimental rock band from Australia, has been a vocal critic of Spotify and was one of several artists that took their music <a class=\"link\" href=\"https://www.latimes.com/entertainment-arts/music/story/2025-08-08/king-gizzard-at-the-bowl\" target=\"_blank\">off the platform</a> in the"
+    },
+    {
+        "id": "https://gizmodo.com/see-the-skies-at-their-most-magical-with-the-best-aurora-photos-of-2025-2000696877",
+        "title": "See the Skies at Their Most Magical With the Best Aurora Photos of 2025",
+        "link": "https://gizmodo.com/see-the-skies-at-their-most-magical-with-the-best-aurora-photos-of-2025-2000696877",
+        "published": "Mon, 08 Dec 2025 22:00:24 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Lights Ice Tori Harp 2025nlpoty\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/lights-ice-Tori-Harp_2025NLPOTY.jpg\" width=\"1920\" /><br /><br />Missed the auroras? These photographers have got you covered."
+    },
+    {
+        "id": "https://gizmodo.com/stablechain-launch-shows-how-far-crypto-has-strayed-from-bitcoins-original-promise-2000696959",
+        "title": "\u2018StableChain\u2019 Launch Shows How Far Crypto Has Strayed From Bitcoin\u2019s Original Promise",
+        "link": "https://gizmodo.com/stablechain-launch-shows-how-far-crypto-has-strayed-from-bitcoins-original-promise-2000696959",
+        "published": "Mon, 08 Dec 2025 21:30:13 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"A statue of the mysterious Bitcoin inventor, Satoshi Nakamoto, in Budapest Park\" class=\"attachment-full size-full wp-post-image\" height=\"1000\" src=\"https://gizmodo.com/app/uploads/2024/10/A-Statue-of-the-Mysterious-Bitcoin-Inventor-Satoshi-Nakamoto-in-Budapest-Park.jpg\" width=\"1500\" /><br /><br />The centralization will continue until morale improves."
+    },
+    {
+        "id": "https://gizmodo.com/its-code-red-week-for-openai-2000696911",
+        "title": "It\u2019s Code Red Week for OpenAI",
+        "link": "https://gizmodo.com/its-code-red-week-for-openai-2000696911",
+        "published": "Mon, 08 Dec 2025 21:15:00 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"A meme that reads &quot;Virgin OpenAI: ads were just an accident&quot; and &quot;Chad Google: ads are coming and you&#039;re gonna love em&quot;\" class=\"attachment-full size-full wp-post-image\" height=\"1000\" src=\"https://gizmodo.com/app/uploads/2025/12/37d.jpg\" width=\"1500\" /><br /><br />Sometimes you light so much cash on fire that you burn the whole house down."
+    },
+    {
+        "id": "https://mashable.com/article/petco-breach-customer-data",
+        "title": "Petco reveals a hack exposed customer data in these states",
+        "link": "https://mashable.com/article/petco-breach-customer-data",
+        "published": "Mon, 08 Dec 2025 21:44:06 +0000",
+        "source": "Mashable",
+        "summary": "Petco breach exposed sensitive customer data, including SSNs and driver\u2019s licenses"
+    },
+    {
+        "id": "https://mashable.com/article/android-ios-apple-google-data-switching-transfer-easier",
+        "title": "Switching between Android and iOS is about to get easier",
+        "link": "https://mashable.com/article/android-ios-apple-google-data-switching-transfer-easier",
+        "published": "Mon, 08 Dec 2025 21:32:05 +0000",
+        "source": "Mashable",
+        "summary": "You'll soon have an easier time moving from Android to iOS, or vice versa, thanks to a future software update for both platforms."
+    },
+    {
+        "id": "https://mashable.com/article/ai-data-center-moratorium",
+        "title": "AI data centers must be stopped, green groups tell Congress",
+        "link": "https://mashable.com/article/ai-data-center-moratorium",
+        "published": "Mon, 08 Dec 2025 21:18:58 +0000",
+        "source": "Mashable",
+        "summary": "A coalition of 350 environmental nonprofits wants a moratorium on data center growth, pointing to the ways it is hurting affordability."
+    },
+    {
+        "id": "https://www.zdnet.com/article/ring-vs-blink/",
+        "title": "Ring vs. Blink: I compared the two most popular security camera brands, and here's who wins",
+        "link": "https://www.zdnet.com/article/ring-vs-blink/",
+        "published": "Mon, 08 Dec 2025 21:21:00 GMT",
+        "source": "Latest news",
+        "summary": "Both Ring and Blink sell some of the most common security cameras on the market, yet they're very different. Here's how."
+    },
+    {
+        "id": "https://www.zdnet.com/article/smart-home-hacking-prevention-methods/",
+        "title": "Should you be afraid of smart home hacking? 6 ways experts keep their devices protected",
+        "link": "https://www.zdnet.com/article/smart-home-hacking-prevention-methods/",
+        "published": "Mon, 08 Dec 2025 21:20:00 GMT",
+        "source": "Latest news",
+        "summary": "The fewer entry points you leave open, the more secure your smart home will be. Here's my guide."
     }
 ]
